[package]
name = "openclaude"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Claude Code gateway proxy for routing Anthropic Messages API traffic to multiple LLM providers"

[[bin]]
name = "occ"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14"
